# timing_belt_calculator

./: .gitignore  README.md
belt_calc/: .clang-format  .gitignore  CMakeLists.txt  README.md
belt_calc/assets/: belts.txt  pulleys.txt
belt_calc/src/: main.cpp
lib/lib_utils/: CMakeLists.txt  README.md
lib/lib_utils/include/lib_utils/: Command.h  Console.h  FileIO.h  Misc.h
lib/lib_utils/src/: Command.cpp  FileIO.cpp  Misc.cpp  main.cpp
